fix: items css alignment

--- a/client/src/scss/pages/client/game.scss
+++ b/client/src/scss/pages/client/game.scss
@@ -908,7 +908,7 @@
 
     .inventory-container {
         flex-direction: row;
-        justify-content: end;
+        justify-content: start;
 
         @media screen and (max-width: $screen_small) {
             flex-direction: column;
